update github action .yml. Add restart nginx

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
             # Install dependencies
             pip install -r requirements.txt
 
+            # Restart nginx
+            sudo systemctl restart nginx
+            
             # Restart the app (example using systemd)
             sudo systemctl restart microblog
             
