update github action, add db upgrade

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
             # Install dependencies
             pip install -r requirements.txt
 
+            # Upgrade database
+            flask db upgrade
+
             # Restart nginx
             sudo systemctl restart nginx
             
